--- a/BLE Exerciser/Info.plist
+++ b/BLE Exerciser/Info.plist
@@ -56,5 +56,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>This app requires Bluetooth access.</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>This app would like to act as a BLE Peripheral.</string>
 </dict>
 </plist>
